--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-<nav>
+<!-- <nav>
   <ul>
     <li><a routerLink="/instructor-class">Instructor Class Dashboard</a></li>
     <li><a routerLink="/instructor-student">Instructor Student Dashboard</a></li>
   </ul>
-</nav>
-
-<router-outlet></router-outlet>
+</nav> -->
+<app-home-page></app-home-page>
+<!-- <router-outlet></router-outlet> -->
