Modified Web Design

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,5 @@
     <li><a routerLink="/instructor-student">Instructor Student Dashboard</a></li>
   </ul>
 </nav> -->
-<app-home-page></app-home-page>
-<!-- <router-outlet></router-outlet> -->
+<!-- <app-home-page></app-home-page> -->
+<router-outlet></router-outlet>
