--- a/src/app/student-view/student-view.component.html
+++ b/src/app/student-view/student-view.component.html
@@ -1,1 +1,5 @@
-<p>student-view works!</p>
+<section>
+    <app-nav-bar></app-nav-bar>
+    <app-side-bar></app-side-bar>
+    <router-outlet></router-outlet>
+</section>
