--- a/src/app/StudentView/side-bar/side-bar.component.html
+++ b/src/app/StudentView/side-bar/side-bar.component.html
@@ -1,20 +1,20 @@
 <div class="sideBar">
     <div class="top">
-        <div class="home">
+        <div routerLink="/home" class="home">
             <img class="img" src="../../assets/StudentView/house.png">
             <p class="text">Home</p>
         </div>
-        <div class="dashboard">
+        <div routerLink="/dashboard" class="dashboard">
             <img class="img" src="../../assets/StudentView/server.rack.png" alt="">
             <p class="text">Dashboard</p>
         </div>
-        <div class="myCourses">
+        <div routerLink="/myCourses" class="myCourses">
             <img class="img" src="../../assets/StudentView/highlighter.png">
             <p class="text">My Courses</p>
         </div>
     </div>
-    <div class="settings">
+    <div routerLink="/settings" class="settings">
         <img class="img" src="../../assets/StudentView/gear.circle.png">
-            <p class="text">Setting</p>
+        <p class="text">Setting</p>
     </div>
 </div>
