--- a/src/app/student-view/student-view.component.html
+++ b/src/app/student-view/student-view.component.html
@@ -1,5 +1,7 @@
 <section>
     <app-nav-bar></app-nav-bar>
     <app-side-bar></app-side-bar>
-    <router-outlet></router-outlet>
+    <div class="body">
+        
+    </div>
 </section>
