--- a/src/app/StudentView/course/course.component.html
+++ b/src/app/StudentView/course/course.component.html
@@ -1,5 +1,22 @@
 <section>
+    <div routerLink="/myCourses" class="goback">
+        <p>< Back</p>
+    </div>
     <div class="className">
         <p>Swift</p>
+    </div>
+    <div class="chatBox">
+        <div class="messages">
+
+        </div>
+        <div class="typeMessage">
+            <div class="left">
+                <p>Type your message here...</p>
+                <form action="">
+                    <input type="text" class="message box">
+                </form>
+            </div>
+            <img src="../../../assets/StudentView/arrow.up.to.line.circle.png" alt="">
+        </div>
     </div>
 </section>
