--- a/src/app/StudentView/my-courses/my-courses.component.html
+++ b/src/app/StudentView/my-courses/my-courses.component.html
@@ -2,4 +2,9 @@
     <div class="className">
         <p>My Courses</p>
     </div>
+    <div routerLink="/course" class="classlist">
+        <div class="class1">
+            <p>Swift</p>
+        </div>
+    </div>
 </section>
