--- a/src/app/StudentView/nav-bar/nav-bar.component.html
+++ b/src/app/StudentView/nav-bar/nav-bar.component.html
@@ -6,7 +6,7 @@
             <div class="profile">
             </div>
             <div class="back">
-                <a routerLink="/home-page"><p>HomePage</p></a>
+                <a routerLink="/home-page" (click)="user.userType = 'home'"><p>HomePage</p></a>
             </div>
         </div>
     </div>
