--- a/src/app/student-view/student-view.component.html
+++ b/src/app/student-view/student-view.component.html
@@ -1,7 +1,8 @@
 <section>
-    <app-nav-bar></app-nav-bar>
-    <app-side-bar></app-side-bar>
     <div class="body">
-        
+        <!-- <app-home *ngIf="menu.MenuState == 'home'"></app-home>
+        <app-dashboard *ngIf="menu.MenuState == 'dashboard'"></app-dashboard>
+        <app-my-courses *ngIf="menu.MenuState == 'mycourses'"></app-my-courses>
+        <app-settings *ngIf="menu.MenuState == 'setting'"></app-settings> -->
     </div>
 </section>
