--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -20,7 +20,7 @@
             <h2>Join DeepLearn Today!</h2>
             <h3>Ready to revolutionize education? Choose your role and join the future of learning with DeepLearn.</h3>
             <div class="buttons">
-                <button class="studentNav" routerLink="/student">I am a Student</button>
+                <button class="studentNav" routerLink="/student" (click)="user.userType = 'student'">I am a Student</button>
                 <button class="InstructorNav" routerLink="/instructor-class">I am a Professor</button>
             </div>
 
