--- a/src/app/student-view/student-view.component.css
+++ b/src/app/student-view/student-view.component.css
@@ -2,3 +2,10 @@ section{
     height: 100vh;
     background-color: rgb(20, 37, 97);
 }
+.body{
+    height: calc(100vh - 10vh);
+    width: calc(100vw - 15vw);
+    position: absolute;
+    right: 0;
+    bottom: 0;
+}
