--- a/src/app/StudentView/dashboard/dashboard.component.css
+++ b/src/app/StudentView/dashboard/dashboard.component.css
@@ -1,7 +1,7 @@
 section{
     height: calc(100vh - 10vh);
     width: calc(100vw - 15vw);
-    background-color: beige;
+    background-color: rgb(15, 38, 107);
     position: absolute;
     right: 0;
     bottom: 0;
