--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -1,5 +1,16 @@
+
+@font-face {
+    font-family: Nothing;
+    src: url("../../fonts/NothingYouCouldDo-Regular.ttf");
+}
+@font-face {
+    font-family: Nico;
+    src: url("../../fonts/NicoMoji-Regular.ttf");
+}
 section{
-    background-color: rgb(20, 27, 97);
+    background-image: url(../..//assets/home.png);
+    background-size: cover;
+    width: 100vw;
     height: 100vh;
 }
 .navbar{
@@ -12,17 +23,29 @@ section{
     color: white;
     padding: 10px;
     margin-top: 100px;
+    font-family: Nothing;
+}
+.line{
+    width: 500px;
+    height: 2px;
+    background-color: #FFF;
+    margin-top: 12px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 .title{
     color: white;
     text-align: center;
     font-size: 50px;
     margin-bottom: 0px;
-    font-family: Nico Moji;
+    font-family: Nico;
 }
 .desc{
     color: white;
     text-align: center;
+    font-family: Nothing;
+    margin-top: 1;
 }
 .content{
     display: flex;
@@ -50,11 +73,12 @@ section{
 .left h2{
     transform: rotate(-90.033deg);
     color: #FFF;
-    font-size: 96px;
+    font-size: 80px;
     font-size: 400;
     position: absolute;
     top: 15%;
     left: -18%;
+    font-family: Nico;
 }
 .left h3{
     color: #FFF;
@@ -63,13 +87,15 @@ section{
     position: absolute;
     top: -35%;
     left: 45%;
+    font-family: Nico;
 }
 .left h4{
     text-align: center;
     align-items: center;
     color: #FFF;
-    font-size: 48px;
+    font-size: 40px;
     font-weight: 400;
+    font-family: Nothing;
 }
 .right{
     height: 50vh;
@@ -95,6 +121,15 @@ section{
 }
 .buttons button{
     width: 250px;
+    height: 50px;
     padding: 5px;
     margin: 10px;
+    background-color: rgb(150, 218, 237);
+    border: none;
+    border-radius: 20px;
+    font-size: large;
+    font-weight: bold;
+}
+.buttons button:hover{
+    background-color: white;
 }
