--- a/src/app/course/course.component.css
+++ b/src/app/course/course.component.css
@@ -42,36 +42,15 @@ header h1{
     height: 1px;
     margin-top: 10px;
 }
-.body{
-    margin-left: auto;
-    margin-right: auto;
-    width: 60vw;
-}
-.body h2{
+.back{
+    width: 80px;
     color: white;
-    font-size: xx-large;
+    font-size: larger;
+    text-align: center;
+    margin: 20px;
 }
-.content{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-.class1, .class2, .class3{
-    margin: 10px;
+.back:hover{
     background-color: white;
-    width: 220px;
-    height: 235px;
+    color: black;
     border-radius: 20px;
-}
-.class1{
-    background-image: url("../../assets/swift.png");
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-}
-.class1 p{
-    color: white;
-    font-size: x-large;
-    font-weight: bold;
 }
