--- a/src/app/course/course.component.html
+++ b/src/app/course/course.component.html
@@ -12,18 +12,7 @@
     </header>
     <div class="line"></div>
 
-    <div class="body">
-        <div class="title">
-            <h2>My Courses</h2>
-        </div>
-        <div class="content" routerLink="/course">
-            <div class="class1">
-                <p>Swift</p>
-            </div>
-            <div class="class2"></div>
-            <div class="class3"></div>
-
-        </div>
+    <div class="back" routerLink="/student">
+        <p>< Back</p>
     </div>
-
 </section>
