Modified InstructorsView, StudentsView, and HomePage

--- a/src/app/course/course.component.css
+++ b/src/app/course/course.component.css
@@ -9,39 +9,6 @@ section{
     width: 100vw;
     height: 100vh;
 }
-header{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    text-align: center;
-}
-header h1{
-    font-family: Nico;
-    color: white;
-    font-size: 50px;
-    margin: 10px;
-    margin-left: 20px;
-}
-.topLeft{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-.menuBar img{
-    margin-top: 12px;
-    margin-left: 20px;
-}
-.profile img{
-    padding-top: 10px;
-    margin-right: 20px;
-    width: 60px;
-}
-.line{
-    background-color: white;
-    height: 1px;
-    margin-top: 10px;
-}
 .back{
     width: 80px;
     color: white;
@@ -53,4 +20,23 @@ header h1{
     background-color: white;
     color: black;
     border-radius: 20px;
+}
+.content{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.left{
+    width: 25vw;
+    text-align: center;
+    color: White;
+    background-color: rgba(255, 255, 255, 0.25);
+    border-radius: 10px;
+}
+.left h2{
+    font-size: xx-large;
+}
+.left h2:b
+.right{
+    width: 60vw;
 }
