--- a/src/app/instructor-add-competencies/instructor-add-competencies.component.html
+++ b/src/app/instructor-add-competencies/instructor-add-competencies.component.html
@@ -1,1 +1,17 @@
-<p>instructor-add-competencies works!</p>
+<section>
+    <app-header></app-header>
+    <div class="back" routerLink="/instructor-class">
+        <p>< Back</p>
+    </div>
+    <div class="content">
+        <div class="left">
+            <h2>Swift</h2>
+            <div class="line"></div>
+            <p>Add Competencies</p>
+
+        </div>
+        <div class="right">
+            <app-chat-box></app-chat-box>
+        </div>
+    </div>
+</section>
