--- a/src/app/instructor-class-dashboard/instructor-class-dashboard.component.html
+++ b/src/app/instructor-class-dashboard/instructor-class-dashboard.component.html
@@ -1,1 +1,38 @@
-<p>instructor-class-dashboard works!</p>
+<section>
+    <app-header></app-header>
+    <div class="back" routerLink="/instructor">
+        <p>< Back</p>
+    </div>
+    <div class="body">
+        <h2>Swift</h2>
+        <div class="line"></div>
+        <div class="content">
+            <div class="left">
+                <div class="addCom" routerLink="/instructor-competencies">
+                    <img src="../../assets/plus.png" alt="plus">
+                    <h3>Add Competenceis</h3>
+                </div>
+                <div class="analytics">
+                    <h3>Analytics & Reports</h3>
+
+                </div>
+
+            </div>
+            <div class="middle">
+                <h3>Assignments and Assessments</h3>
+
+            </div>
+            <div class="right">
+                <h3>Enrolled Students</h3>
+                <ul>
+                    <li>Student 1</li>
+                    <li>Student 2</li>
+                    <li>Student 3</li>
+                </ul>
+
+            </div>
+        </div>
+
+
+    </div>
+</section>
