--- a/src/app/instructors-view/instructors-view.component.html
+++ b/src/app/instructors-view/instructors-view.component.html
@@ -1,1 +1,19 @@
-<p>instructors-view works!</p>
+<section>
+    <app-header></app-header>
+    <div class="body">
+        <div class="title">
+            <h2>My Courses</h2>
+        </div>
+        <div class="content">
+            <div routerLink="/instructor-class" class="class1">
+                <p>Swift</p>
+            </div>
+            <div class="class2"></div>
+            <div class="addClass">
+                <img src="../../assets/plus.png" alt="plus">
+                <h3>Create Class</h3>
+            </div>
+
+        </div>
+    </div>
+</section>
