--- a/src/app/student-view/student-view.component.html
+++ b/src/app/student-view/student-view.component.html
@@ -1,23 +1,11 @@
 <section>
-    <header>
-        <div class="topLeft">
-            <div class="menuBar">
-                <img src="../../assets/menuBar.png" alt="">
-            </div>
-            <h1 routerLink="/home">Deeplearn</h1>
-        </div>
-        <div class="profile">
-            <img src="../../assets/profile.png" alt="">
-        </div>
-    </header>
-    <div class="line"></div>
-
+    <app-header></app-header>
     <div class="body">
         <div class="title">
             <h2>My Courses</h2>
         </div>
-        <div class="content" routerLink="/course">
-            <div class="class1">
+        <div class="content">
+            <div routerLink="/course" class="class1">
                 <p>Swift</p>
             </div>
             <div class="class2"></div>
