--- a/src/app/course/course.component.css
+++ b/src/app/course/course.component.css
@@ -26,17 +26,28 @@ section{
     flex-direction: row;
     justify-content: space-around;
 }
+.line{
+    width: 300px;
+    height: 2px;
+    background-color: #FFF;
+    margin-top: 12px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+}
 .left{
     width: 25vw;
     text-align: center;
     color: White;
     background-color: rgba(255, 255, 255, 0.25);
     border-radius: 10px;
+    height: 75vh;
 }
 .left h2{
     font-size: xx-large;
+    margin-top: 20px;
 }
-.left h2:b
 .right{
     width: 60vw;
 }
