--- a/src/app/instructor-add-competencies/instructor-add-competencies.component.css
+++ b/src/app/instructor-add-competencies/instructor-add-competencies.component.css
@@ -1,3 +1,7 @@
+@font-face {
+    font-family: Nico;
+    src: url("../../fonts/NicoMoji-Regular.ttf");
+  }
 section{
     background-image: url(../../assets/home.png);
     /* filter: blur(1px); */
@@ -25,6 +29,7 @@ section{
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 10px;
 }
 .content{
     display: flex;
@@ -41,6 +46,7 @@ section{
 .left h2{
     font-size: xx-large;
     margin-bottom: 10px;
+    margin-top: 10px;
 }
 .left h2:b
 .right{
