--- a/src/app/instructor-class-dashboard/instructor-class-dashboard.component.css
+++ b/src/app/instructor-class-dashboard/instructor-class-dashboard.component.css
@@ -1,3 +1,7 @@
+@font-face {
+    font-family: Nico;
+    src: url("../../fonts/NicoMoji-Regular.ttf");
+  }
 section{
     background-image: url(../../assets/home.png);
     /* filter: blur(1px); */
@@ -42,6 +46,13 @@ section{
     justify-content: space-evenly;
     color: white;
 }
+.left{
+    width: 15vw;
+    height: 50vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
 .addCom, .analytics{
     width: 15vw;
     height: 25vh;
@@ -52,6 +63,7 @@ section{
     flex-direction: column;
     justify-content: center;
     text-align: center;
+    margin-bottom: 2vh;
 }
 .addCom h3{
     margin-top: 0;
@@ -69,10 +81,16 @@ section{
     height: 20vw;
     background-color: #ffffff30;
 }
+.middle h3{
+    margin-top: 10px;
+}
 .right{
     width: 15vw;
     height: 50vh;
     background-color: #ffffff30;
+}
+.right h3{
+    margin-top: 10px;
 }
 .right ul{
     text-align: left;
