--- a/src/app/instructors-view/instructors-view.component.css
+++ b/src/app/instructors-view/instructors-view.component.css
@@ -13,6 +13,7 @@ section{
     margin-left: auto;
     margin-right: auto;
     width: 60vw;
+    margin-top: 5vh;
 }
 .body h2{
     color: white;
@@ -22,6 +23,7 @@ section{
     display: flex;
     flex-direction: row;
     justify-content: center;
+    margin-top: 5vh;
 }
 .class1, .class2{
     margin: 10px;
