--- a/src/app/course/course.component.html
+++ b/src/app/course/course.component.html
@@ -12,7 +12,7 @@
 
         </div>
         <div class="right">
-            <app-chat-box></app-chat-box>
+            <app-student-chat-box></app-student-chat-box>
         </div>
     </div>
 </section>
