--- a/src/app/instructor-add-competencies/instructor-add-competencies.component.html
+++ b/src/app/instructor-add-competencies/instructor-add-competencies.component.html
@@ -11,7 +11,7 @@
 
         </div>
         <div class="right">
-            <app-chat-box></app-chat-box>
+            <app-student-chat-box></app-student-chat-box>
         </div>
     </div>
 </section>
