--- a/src/app/course/course.component.css
+++ b/src/app/course/course.component.css
@@ -43,6 +43,7 @@ section{
     background-color: rgba(255, 255, 255, 0.25);
     border-radius: 10px;
     height: 75vh;
+    display: none;
 }
 .left h2{
     font-size: xx-large;
