--- a/src/app/instructor-chat-box/instructor-chat-box.component.css
+++ b/src/app/instructor-chat-box/instructor-chat-box.component.css
@@ -17,17 +17,25 @@
     border-radius: 50%;
     margin-left: 10px; /* Adjusted margin for user messages */
     margin-right: 10px; /* Margin for AI messages */
+    line-height: 2.5em;
+  }
+  .profile-picture{
+    padding: 10px 0px;
   }
   
   .user-message {
     color: #ffffff;
+    font-size: 30px;
+    line-height: 1.2em;
     display: flex;
     justify-content: flex-start; /* Align user messages to the left */
   }
   
   .ai-message {
-    color: #007bff;
+    line-height: 1.2em;
+    color: #ffffff;
     justify-content: flex-start; /* Align AI messages to the left */
+    font-size: 30px;
   }
   
   /* .message-content {
