--- a/src/app/student-chat-box/student-chat-box.component.css
+++ b/src/app/student-chat-box/student-chat-box.component.css
@@ -4,6 +4,9 @@
   border: 1px solid #ccc;
   padding: 10px;
 }
+.profile-picture{
+  padding: 10px 0px;
+}
 
 .user-message, .ai-message {
   display: flex;
@@ -17,17 +20,22 @@
   border-radius: 50%;
   margin-left: 10px; /* Adjusted margin for user messages */
   margin-right: 10px; /* Margin for AI messages */
+  
 }
 
 .user-message {
   color: #ffffff;
+  font-size: 30px;
   display: flex;
   justify-content: flex-start; /* Align user messages to the left */
+  line-height: 1.2em;
 }
 
 .ai-message {
-  color: #007bff;
+  color: #ffffff;
   justify-content: flex-start; /* Align AI messages to the left */
+  font-size: 30px;
+  line-height: 1.2em;
 }
 
 /* .message-content {
