--- a/src/app/instructor-class-dashboard/instructor-class-dashboard.component.html
+++ b/src/app/instructor-class-dashboard/instructor-class-dashboard.component.html
@@ -4,7 +4,7 @@
         <p>< Back</p>
     </div>
     <div class="body">
-        <h2>Swift</h2>
+        <!-- <h2>Swift</h2>
         <div class="line"></div>
         <div class="content">
             <div class="left">
@@ -31,8 +31,8 @@
                 </ul>
 
             </div>
-        </div>
-
+        </div> -->
+        <app-instructor-chat-box></app-instructor-chat-box>
 
     </div>
 </section>
