--- a/src/app/profile-menu/profile-menu.component.css
+++ b/src/app/profile-menu/profile-menu.component.css
@@ -3,6 +3,7 @@ section{
     right: 10px;
     width: 150px;
     height: 300px;
-    background-color: white;
+    background: rgba(147, 147, 147, 0.25);
+    border: 1px solid white;
 
 }
