--- a/src/app/side-bar/side-bar.component.css
+++ b/src/app/side-bar/side-bar.component.css
@@ -1,11 +1,12 @@
 section{
     background: rgba(147, 147, 147, 0.25);
     width: 250px;
-    height: 781px;
+    height: 75vh;
     position: absolute;
     z-index: 10;
     text-align: center;
-    border-right: 1px solid white;
+    /* border-right: 1px solid white; */
+    border: 1px solid white;
 }
 .menu1 h1{
     margin-top: 0;
@@ -16,6 +17,8 @@ section{
     width: 150px;
     margin-left: auto;
     margin-right: auto;
+    display: none;
+
 }
 .menu1:hover{
     background-color: rgb(87, 87, 87);
