--- a/src/app/student-chat-box/student-chat-box.component.css
+++ b/src/app/student-chat-box/student-chat-box.component.css
@@ -3,20 +3,35 @@
   overflow-y: auto;
   border: 1px solid #ccc;
   padding: 10px;
+  margin: 0px 5vw;
 }
 .profile-picture{
   padding: 10px 0px;
+  padding-top: 3px;
 }
-
 .user-message, .ai-message {
   display: flex;
   align-items: center;
   margin-bottom: 10px;
 }
 
+.ai-message-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: baseline;
+}
+.message-content{
+  text-align: left;
+}
+.user-message-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: baseline;
+}
+
 .user-message .profile-picture, .ai-message .profile-picture {
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
   margin-left: 10px; /* Adjusted margin for user messages */
   margin-right: 10px; /* Margin for AI messages */
@@ -49,10 +64,11 @@
   display: flex;
   justify-content: center;
   text-align: center;
+  margin: 10px 5vw;
 }
 
 .input-container input {
-  width: 55vw;
+  width: 70vw;
   background-color: rgba(0, 123, 255, 0);
   border: none;
 }
@@ -67,4 +83,20 @@
 .submit {
   width: 30px;
   margin-top: 3px;
+}
+
+@media only screen and (max-width: 500px){
+  .ai-message {
+    color: #ffffff;
+    justify-content: flex-start; /* Align AI messages to the left */
+    font-size: 20px;
+    line-height: 1.2em;
+  }
+  .user-message {
+    color: #ffffff;
+    font-size: 20px;
+    display: flex;
+    justify-content: flex-start; /* Align user messages to the left */
+    line-height: 1.2em;
+  }
 }
