--- a/src/app/student-view/student-view.component.html
+++ b/src/app/student-view/student-view.component.html
@@ -8,8 +8,8 @@
             <div routerLink="/course" class="class1">
                 <p>Swift</p>
             </div>
-            <div class="class2"></div>
-            <div class="class3"></div>
+            <!-- <div class="class2"></div>
+            <div class="class3"></div> -->
 
         </div>
     </div>
