--- a/src/app/instructor-chat-box/instructor-chat-box.component.html
+++ b/src/app/instructor-chat-box/instructor-chat-box.component.html
@@ -20,7 +20,7 @@
   </div>
   
   <div class="input-container">
-    <input [(ngModel)]="userInput" placeholder="Type your message..." />
+    <textarea [(ngModel)]="userInput" placeholder="Type your message..." (keydown.enter)="$event.stopPropagation();"></textarea>
     <button (click)="sendMessage()" [disabled]="isWaitingForAi">
       <img class="submit" src="../../assets/submit.png" />
     </button>
