--- a/src/app/instructors-view/instructors-view.component.html
+++ b/src/app/instructors-view/instructors-view.component.html
@@ -13,7 +13,9 @@
                 <img src="../../assets/plus.png" alt="plus">
                 <h3>Create Class</h3>
             </div>
-
+        </div>
+        <div class="classList">
+            <app-lesson></app-lesson>
         </div>
     </div>
 </section>
