--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -69,8 +69,8 @@ section{
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 419px;
-  height: 370px;
+  width: auto;
+  height: 340px;
   border-radius: 20px;
   opacity: 0.5;
   filter: blur(2.5px);
@@ -78,8 +78,7 @@ section{
 .left h2{
   transform: rotate(-90.033deg);
   color: #FFF;
-  font-size: 80px;
-  font-size: 400;
+  font-size: 70px;
   position: absolute;
   top: 25%;
   left: -18%;
